--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
     .main-links {
         display: flex;
         flex-direction: column;
-        align-items: center; /* Center the links within main-links */
+        align-items: left; /* Center the links within main-links */
         gap: 8px;
         width: 100%; /* Take full width of its parent (.hero-nav-col) */
         margin: 8px 0 0 0;
