--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         margin-top: 0;
         word-break: break-word;
         hyphens: auto;
-        line-height: 1;
+        line-height: 1.2;
         /* REMOVED: text-justify: inter-word; */
     }
 
@@ -583,7 +583,7 @@
     .main-links {
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* Changed from center to flex-end to align with text */
+        align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
         width: 100%;
         margin: 8px 0 0 0;
