--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 
     /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
-        display: flex;
+        display: centre;
         flex-direction: column;
         align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
