--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     }
     .hero-logo-col {
         flex: 0 0 auto;
-        margin-right: 20px;
+        margin-right: 2px;
         margin-top: 0px;
     }
     .hero-logo { height: 125px; }
@@ -581,7 +581,7 @@
 
     /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
-        display: centre;
+        display: flex;
         flex-direction: column;
         align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
@@ -597,7 +597,7 @@
         width: 90%; /* Keep this if you want buttons to stretch most of the column width */
         justify-content: center; /* This will center content INSIDE the button */
         padding: 0.5em 0;
-        border-radius: 10px;
+        border-radius: 5px;
     }
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
