--- a/index.html
+++ b/index.html
@@ -507,19 +507,20 @@
        /* MOBILE OPTIMIZATION (only for mobile) */
 @media (max-width: 700px) {
     html, body {
-        font-size: 15px; /* Keep this as it is or adjust as needed for overall sizing */
+        font-size: 15px;
     }
     .hero-header {
         display: flex;
-        flex-direction: row;
-        align-items: flex-start; /* Aligns the very top of logo and nav-col */
-        justify-content: space-between;
-        padding: 0 4vw 0 2vw;
+        flex-direction: row; /* Keep logo and titles side-by-side */
+        align-items: flex-start; /* Aligns the top of both columns */
+        justify-content: space-between; /* <--- CRITICAL: Pushes logo-col to left, nav-col to right */
+        padding: 0 4vw 0 2vw; /* Keep original padding */
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
         box-sizing: border-box;
     }
+
     .hero-logo-col {
         display: flex;
         flex-direction: column; /* Stack logo above nav links */
@@ -549,44 +550,34 @@
         padding: 0;
         margin-top: 0px;
     }
+
     .hero-nav-title {
-        /* REVISED: Right align instead of justify */
-        text-align: right;
-        width: 90%; /* Allow it to take full width to enforce breaks if content is long */
-        font-size: 3rem; /* Keep this for size */
+        text-align: right; /* Remains right-aligned */
+        width: 90%; /* Keep this for wrapping */
+        font-size: 3rem;
         -webkit-text-stroke: 1px #000;
         text-stroke: 1.3px #000;
         margin-bottom: 8px;
-        word-break: break-word; /* Helps with breaking long words, but `width` is more important for phrases */
+        word-break: break-word;
         hyphens: auto;
-        line-height: 1; /* Keep compact line height */
-        /* REMOVED: text-justify: inter-word; as it's not relevant for right-align */
+        line-height: 1;
     }
     .hero-nav-subtitle {
-        /* REVISED: Right align instead of justify */
-        text-align: right;
-        width: 80%; /* Allow it to take full width */
-        font-size: 3rem; /* Keep this for size */
+        text-align: right; /* Remains right-aligned */
+        width: 80%; /* Keep this for wrapping */
+        font-size: 3rem;
         text-shadow:
-            -1.5px -1.5px 0 #000,
-            1.5px -1.5px 0 #000,
-            -1.5px 1.5px 0 #000,
-            1.5px 1.5px 0 #000,
-            0px -1.5px 0 #000,
-            0px 1.5px 0 #000,
-            -1.5px 0px 0 #000,
-            1.5px 0px 0 #000;
+            -1.5px -1.5px 0 #000, 1.5px -1.5px 0 #000,
+            -1.5px 1.5px 0 #000, 1.5px 1.5px 0 #000,
+            0px -1.5px 0 #000, 0px 1.5px 0 #000,
+            -1.5px 0px 0 #000, 1.5px 0px 0 #000;
         margin-bottom: 18px;
         margin-top: 0;
         word-break: break-word;
         hyphens: auto;
         line-height: 1.2;
-        /* REMOVED: text-justify: inter-word; */
     }
 
-    /* ... rest of your mobile CSS ... */
-
-    /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
         display: flex;
         flex-direction: column; /* Stack links vertically */
@@ -603,6 +594,9 @@
         padding: 0.5em 1em; /* Adjust padding for desired button width/shape */
         border-radius: 10px;
     }
+
+    /* ... rest of your mobile CSS (separators, gallery, etc.) ... */
+}
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
