--- a/index.html
+++ b/index.html
@@ -507,96 +507,98 @@
        /* MOBILE OPTIMIZATION (only for mobile) */
 @media (max-width: 700px) {
     html, body {
-        font-size: 15px;
+        font-size: 15px; /* Keep this as it is or adjust as needed for overall sizing */
     }
     .hero-header {
         display: flex;
-        flex-direction: row; /* Keep logo and titles side-by-side */
-        align-items: flex-start; /* Aligns the top of both columns */
-        justify-content: space-between; /* <--- CRITICAL: Pushes logo-col to left, nav-col to right */
-        padding: 0 4vw 0 2vw; /* Keep original padding */
+        flex-direction: row;
+        align-items: flex-start; /* Aligns the very top of logo and nav-col */
+        justify-content: space-between;
+        padding: 0 4vw 0 2vw;
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
         box-sizing: border-box;
     }
-
     .hero-logo-col {
-        display: flex;
-        flex-direction: column; /* Stack logo above nav links */
-        align-items: flex-start; /* <--- NEW: LEFT-ALIGN logo and nav links within this column */
-        flex: 0 0 auto; /* Allow it to shrink to content, but not grow */
-        margin-right: 10px; /* <--- Space between logo/nav column and title column */
+        flex: 0 0 auto;
+        margin-right: 5px;
         margin-top: 0px;
     }
-
+    .hero-logo { height: 125px; }
     .logo-circle {
         padding: 8px;
-        margin-bottom: 8px; /* Space between logo and nav links */
+        margin-bottom: 0;
     }
-
-    .hero-logo {
-        height: 125px; /* Keep your desired logo size */
-    }
-
     .hero-nav-col {
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* <--- CRITICAL: Keeps titles and subtitles RIGHT-ALIGNED */
-        flex-grow: 1; /* Allow it to take up available space, pushing it left from right edge */
-        width: auto; /* Let content define width */
-        max-width: 250px; /* Adjust this to control title/subtitle wrapping */
+        align-items: flex-end; /* CRITICAL: This right-aligns the title, subtitle, and nav within this column */
+        flex-grow: 1;
+        /* Adjust width to control where text breaks. This is key for the multiline English title */
+        width: 70%; /* You may need to tune this (e.g., 65%, 75%) based on screen size and text breaks */
+        max-width: 250px; /* Keep this if you want to cap the maximum width */
         margin: 0;
         padding: 0;
         margin-top: 0px;
     }
-
     .hero-nav-title {
-        text-align: right; /* Remains right-aligned */
-        width: 90%; /* Keep this for wrapping */
-        font-size: 3rem;
+        /* REVISED: Right align instead of justify */
+        text-align: right;
+        width: 90%; /* Allow it to take full width to enforce breaks if content is long */
+        font-size: 3rem; /* Keep this for size */
         -webkit-text-stroke: 1px #000;
         text-stroke: 1.3px #000;
         margin-bottom: 8px;
-        word-break: break-word;
+        word-break: break-word; /* Helps with breaking long words, but `width` is more important for phrases */
         hyphens: auto;
-        line-height: 1;
+        line-height: 1; /* Keep compact line height */
+        /* REMOVED: text-justify: inter-word; as it's not relevant for right-align */
     }
     .hero-nav-subtitle {
-        text-align: right; /* Remains right-aligned */
-        width: 80%; /* Keep this for wrapping */
-        font-size: 3rem;
+        /* REVISED: Right align instead of justify */
+        text-align: right;
+        width: 80%; /* Allow it to take full width */
+        font-size: 3rem; /* Keep this for size */
         text-shadow:
-            -1.5px -1.5px 0 #000, 1.5px -1.5px 0 #000,
-            -1.5px 1.5px 0 #000, 1.5px 1.5px 0 #000,
-            0px -1.5px 0 #000, 0px 1.5px 0 #000,
-            -1.5px 0px 0 #000, 1.5px 0px 0 #000;
+            -1.5px -1.5px 0 #000,
+            1.5px -1.5px 0 #000,
+            -1.5px 1.5px 0 #000,
+            1.5px 1.5px 0 #000,
+            0px -1.5px 0 #000,
+            0px 1.5px 0 #000,
+            -1.5px 0px 0 #000,
+            1.5px 0px 0 #000;
         margin-bottom: 18px;
         margin-top: 0;
         word-break: break-word;
         hyphens: auto;
         line-height: 1.2;
+        /* REMOVED: text-justify: inter-word; */
     }
 
+    /* ... rest of your mobile CSS ... */
+
+    /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
         display: flex;
-        flex-direction: column; /* Stack links vertically */
-        align-items: flex-start; /* <--- NEW: LEFT-ALIGN individual links horizontally within this container */
+        flex-direction: column;
+        align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
-        width: auto; /* Let it shrink to content width */
-        margin: 0;
+        width: 100%;
+        margin: 8px 0 0 0;
         padding: 0;
     }
     .main-links a {
         font-size: 0.95rem;
-        width: auto; /* <--- NEW: Let buttons shrink to content width */
-        justify-content: flex-start; /* <--- NEW: Left-align content inside the button */
-        padding: 0.5em 1em; /* Adjust padding for desired button width/shape */
+        /* Adjust width or remove fixed width if you want it to shrink-wrap content and align right */
+        /* If you want the buttons to align right AND be fixed width, keep width: 90%; */
+        /* If you want them to shrink to content and align right, set width: auto; */
+        width: 90%; /* Keep this if you want buttons to stretch most of the column width */
+        justify-content: center; /* This will center content INSIDE the button */
+        padding: 0.5em 0;
         border-radius: 10px;
     }
-
-    /* ... rest of your mobile CSS (separators, gallery, etc.) ... */
-}
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
