--- a/index.html
+++ b/index.html
@@ -522,10 +522,10 @@
     }
     .hero-logo-col {
         flex: 0 0 auto;
-        margin-right: 5px;
+        margin-right: 1px;
         margin-top: 0px;
     }
-    .hero-logo { height: 125px; }
+    .hero-logo { height: 130px; }
     .logo-circle {
         padding: 8px;
         margin-bottom: 0;
@@ -533,7 +533,7 @@
     .hero-nav-col {
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* CRITICAL: This right-aligns the title, subtitle, and nav within this column */
+        align-items: left; /* CRITICAL: This right-aligns the title, subtitle, and nav within this column */
         flex-grow: 1;
         /* Adjust width to control where text breaks. This is key for the multiline English title */
         width: 70%; /* You may need to tune this (e.g., 65%, 75%) based on screen size and text breaks */
