--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         margin-right: 1px;
         margin-top: 0px;
     }
-    .hero-logo { height: 130px; }
+    .hero-logo { height: 150px; }
     .logo-circle {
         padding: 8px;
         margin-bottom: 0;
@@ -582,7 +582,7 @@
     /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
         width: 100%;
@@ -597,7 +597,7 @@
         width: 90%; /* Keep this if you want buttons to stretch most of the column width */
         justify-content: center; /* This will center content INSIDE the button */
         padding: 0.5em 0;
-        border-radius: 10px;
+        border-radius: 20px;
     }
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
