--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     .hero-nav-subtitle {
         /* REVISED: Right align instead of justify */
         text-align: right;
-        width: 80%; /* Allow it to take full width */
+        width: 90%; /* Allow it to take full width */
         font-size: 3rem; /* Keep this for size */
         text-shadow:
             -1.5px -1.5px 0 #000,
@@ -582,7 +582,7 @@
     /* IMPORTANT: Re-check your .main-links alignment */
     .main-links {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: centre; /* Changed from center to flex-end to align with text */
         gap: 8px;
         width: 100%;
