--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
     }
     .hero-header {
         display: flex;
-        flex-direction: row;
-        align-items: flex-start; /* Aligns the very top of logo and nav-col */
+        flex-direction: row; /* Keep row for logo-col and nav-col side-by-side */
+        align-items: flex-start;
         justify-content: space-between;
         padding: 0 4vw 0 2vw;
         margin-top: 14px;
@@ -521,6 +521,9 @@
         box-sizing: border-box;
     }
     .hero-logo-col {
+        display: flex; /* Make it a flex container */
+        flex-direction: column; /* Stack logo and nav links vertically */
+        align-items: flex-start; /* Align contents to the left */
         flex: 0 0 auto;
         margin-right: 1px;
         margin-top: 0px;
@@ -533,9 +536,8 @@
     .hero-nav-col {
         display: flex;
         flex-direction: column;
-        align-items: left; /* CRITICAL: This right-aligns the title, subtitle, and nav within this column */
+        align-items: flex-end; /* Keep this for title/subtitle right alignment */
         flex-grow: 1;
-        /* Adjust width to control where text breaks. This is key for the multiline English title */
         width: 70%; /* You may need to tune this (e.g., 65%, 75%) based on screen size and text breaks */
         max-width: 250px; /* Keep this if you want to cap the maximum width */
         margin: 0;
@@ -543,23 +545,20 @@
         margin-top: 0px;
     }
     .hero-nav-title {
-        /* REVISED: Right align instead of justify */
         text-align: right;
-        width: 90%; /* Allow it to take full width to enforce breaks if content is long */
-        font-size: 3rem; /* Keep this for size */
+        width: 90%;
+        font-size: 3rem;
         -webkit-text-stroke: 1px #000;
         text-stroke: 1.3px #000;
         margin-bottom: 8px;
-        word-break: break-word; /* Helps with breaking long words, but `width` is more important for phrases */
+        word-break: break-word;
         hyphens: auto;
-        line-height: 1; /* Keep compact line height */
-        /* REMOVED: text-justify: inter-word; as it's not relevant for right-align */
+        line-height: 1;
     }
     .hero-nav-subtitle {
-        /* REVISED: Right align instead of justify */
         text-align: right;
-        width: 90%; /* Allow it to take full width */
-        font-size: 3rem; /* Keep this for size */
+        width: 90%;
+        font-size: 3rem;
         text-shadow:
             -1.5px -1.5px 0 #000,
             1.5px -1.5px 0 #000,
@@ -574,31 +573,27 @@
         word-break: break-word;
         hyphens: auto;
         line-height: 1.2;
-        /* REMOVED: text-justify: inter-word; */
     }
 
-    /* ... rest of your mobile CSS ... */
-
-    /* IMPORTANT: Re-check your .main-links alignment */
+    /* Updated .main-links for placement under logo */
     .main-links {
         display: flex;
         flex-direction: column;
-        align-items: centre; /* Changed from center to flex-end to align with text */
+        align-items: flex-start; /* Align links themselves to the left */
         gap: 8px;
-        width: 100%;
-        margin: 8px 0 0 0;
+        width: auto; /* Allow links to size based on content or padding */
+        margin: 18px 0 0 0; /* Add margin-top to separate from logo */
         padding: 0;
     }
     .main-links a {
         font-size: 0.95rem;
-        /* Adjust width or remove fixed width if you want it to shrink-wrap content and align right */
-        /* If you want the buttons to align right AND be fixed width, keep width: 90%; */
-        /* If you want them to shrink to content and align right, set width: auto; */
-        width: 90%; /* Keep this if you want buttons to stretch most of the column width */
-        justify-content: center; /* This will center content INSIDE the button */
-        padding: 0.5em 0;
+        width: auto; /* Allow buttons to shrink-wrap content */
+        justify-content: flex-start; /* Align content inside button to the left */
+        padding: 0.5em 1em; /* Adjust padding as needed */
         border-radius: 20px;
     }
+    /* ... rest of your mobile CSS ... */
+}
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
