--- a/index.html
+++ b/index.html
@@ -680,28 +680,26 @@
             <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
           </div>
         </div>
-        <div class="hero-nav-col">
-          <div class="hero-nav-title">LAZY TOAD STUDIOS</div>
-          <div class="hero-nav-subtitle">怠け者なヒキガエルのスタジオ</div>
-          <nav class="main-links">
-            <a href="/shop.html" class="shop" title="Shop">
-              <span class="icon" aria-hidden="true"></span>
-              Shop
-            </a>
-            <a href="/contact.html" class="contact" title="Contact">
-              <span class="icon" aria-hidden="true"></span>
-              Contact
-            </a>
-            <a href="/about.html" class="about" title="About">
-              <span class="icon" aria-hidden="true"></span>
-              About
-            </a>
-            <a href="/work.html" class="work" title="Work">
-              <span class="icon" aria-hidden="true"></span>
-              Work
-            </a>
-          </nav>
-        </div>
+        <div class="hero-header">
+  <div class="hero-logo-col">
+    <div class="logo-circle">
+      <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
+    </div>
+    <nav class="main-links">
+      <a href="/shop.html" class="shop" title="Shop">
+        <span class="icon" aria-hidden="true"></span>
+        Shop
+      </a>
+      <a href="/contact.html" class="contact" title="Contact">
+        <span class="icon" aria-hidden="true"></span>
+        Contact
+      </a>
+      <a href="/about.html" class="about" title="About">
+        <span class="icon" aria-hidden="true"></span>
+        About
+      </a>
+      <a href="/work.html" class="work" title="Work">
+        <span class="icon" aria-hidden="true">
       </div>
       <div class="nav-hero-separator">
         <svg viewBox="0 0 100 56" preserveAspectRatio="none">
