--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
     }
     .hero-header {
         display: flex;
-        flex-direction: row; /* Keep row for logo-col and nav-col side-by-side */
-        align-items: flex-start;
+        flex-direction: row;
+        align-items: flex-start; /* Aligns the very top of logo and nav-col */
         justify-content: space-between;
         padding: 0 4vw 0 2vw;
         margin-top: 14px;
@@ -521,32 +521,11 @@
         box-sizing: border-box;
     }
     .hero-logo-col {
-        display: flex; /* Make it a flex container */
-        flex-direction: column; /* Stack logo and nav links vertically */
-        align-items: flex-start; /* Align contents to the left */
-        /* ... (rest of hero-logo-col mobile CSS) ... */
+        flex: 0 0 auto;
+        margin-right: 0px;
+        margin-top: 0px;
     }
-
-    /* ... (hero-nav-col and title/subtitle CSS, which remain the same) ... */
-
-    /* This CSS will now correctly style the main-links *within* hero-logo-col */
-    .main-links {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start; /* Align links themselves to the left */
-        gap: 8px;
-        width: auto;
-        margin: 18px 0 0 0; /* Add margin-top to separate from logo */
-        padding: 0;
-    }
-    .main-links a {
-        font-size: 0.95rem;
-        width: auto;
-        justify-content: flex-start;
-        padding: 0.5em 1em;
-        border-radius: 20px;
-    }
-    .hero-logo { height: 160px; }
+    .hero-logo { height: 175px; }
     .logo-circle {
         padding: 8px;
         margin-bottom: 0;
@@ -554,8 +533,9 @@
     .hero-nav-col {
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* Keep this for title/subtitle right alignment */
+        align-items: left; /* CRITICAL: This right-aligns the title, subtitle, and nav within this column */
         flex-grow: 1;
+        /* Adjust width to control where text breaks. This is key for the multiline English title */
         width: 70%; /* You may need to tune this (e.g., 65%, 75%) based on screen size and text breaks */
         max-width: 250px; /* Keep this if you want to cap the maximum width */
         margin: 0;
@@ -563,20 +543,23 @@
         margin-top: 0px;
     }
     .hero-nav-title {
+        /* REVISED: Right align instead of justify */
         text-align: right;
-        width: 90%;
-        font-size: 3rem;
+        width: 90%; /* Allow it to take full width to enforce breaks if content is long */
+        font-size: 3rem; /* Keep this for size */
         -webkit-text-stroke: 1px #000;
         text-stroke: 1.3px #000;
         margin-bottom: 8px;
-        word-break: break-word;
+        word-break: break-word; /* Helps with breaking long words, but `width` is more important for phrases */
         hyphens: auto;
-        line-height: 1;
+        line-height: 1; /* Keep compact line height */
+        /* REMOVED: text-justify: inter-word; as it's not relevant for right-align */
     }
     .hero-nav-subtitle {
+        /* REVISED: Right align instead of justify */
         text-align: right;
-        width: 90%;
-        font-size: 3rem;
+        width: 90%; /* Allow it to take full width */
+        font-size: 3rem; /* Keep this for size */
         text-shadow:
             -1.5px -1.5px 0 #000,
             1.5px -1.5px 0 #000,
@@ -591,10 +574,31 @@
         word-break: break-word;
         hyphens: auto;
         line-height: 1.2;
+        /* REMOVED: text-justify: inter-word; */
     }
-    
+
     /* ... rest of your mobile CSS ... */
-}
+
+    /* IMPORTANT: Re-check your .main-links alignment */
+    .main-links {
+        display: flex;
+        flex-direction: column;
+        align-items: centre; /* Changed from center to flex-end to align with text */
+        gap: 8px;
+        width: 100%;
+        margin: 8px 0 0 0;
+        padding: 0;
+    }
+    .main-links a {
+        font-size: 0.95rem;
+        /* Adjust width or remove fixed width if you want it to shrink-wrap content and align right */
+        /* If you want the buttons to align right AND be fixed width, keep width: 90%; */
+        /* If you want them to shrink to content and align right, set width: auto; */
+        width: 90%; /* Keep this if you want buttons to stretch most of the column width */
+        justify-content: center; /* This will center content INSIDE the button */
+        padding: 0.5em 0;
+        border-radius: 20px;
+    }
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
@@ -680,26 +684,28 @@
             <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
           </div>
         </div>
-        <div class="hero-header">
-  <div class="hero-logo-col">
-    <div class="logo-circle">
-      <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
-    </div>
-    <nav class="main-links">
-      <a href="/shop.html" class="shop" title="Shop">
-        <span class="icon" aria-hidden="true"></span>
-        Shop
-      </a>
-      <a href="/contact.html" class="contact" title="Contact">
-        <span class="icon" aria-hidden="true"></span>
-        Contact
-      </a>
-      <a href="/about.html" class="about" title="About">
-        <span class="icon" aria-hidden="true"></span>
-        About
-      </a>
-      <a href="/work.html" class="work" title="Work">
-        <span class="icon" aria-hidden="true">
+        <div class="hero-nav-col">
+          <div class="hero-nav-title">LAZY TOAD STUDIOS</div>
+          <div class="hero-nav-subtitle">怠け者なヒキガエルのスタジオ</div>
+          <nav class="main-links">
+            <a href="/shop.html" class="shop" title="Shop">
+              <span class="icon" aria-hidden="true"></span>
+              Shop
+            </a>
+            <a href="/contact.html" class="contact" title="Contact">
+              <span class="icon" aria-hidden="true"></span>
+              Contact
+            </a>
+            <a href="/about.html" class="about" title="About">
+              <span class="icon" aria-hidden="true"></span>
+              About
+            </a>
+            <a href="/work.html" class="work" title="Work">
+              <span class="icon" aria-hidden="true"></span>
+              Work
+            </a>
+          </nav>
+        </div>
       </div>
       <div class="nav-hero-separator">
         <svg viewBox="0 0 100 56" preserveAspectRatio="none">
