--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
     /* IMPORTANT: Changes for .main-links to move it */
     .main-links {
         position: absolute; /* ADDED: Breaks it from normal flow */
-        top: 175px; /* ADJUST THIS VALUE: Place it below the logo (logo height 160px + some space) */
+        top: 200px; /* ADJUST THIS VALUE: Place it below the logo (logo height 160px + some space) */
         left: 2vw; /* Align with the left edge of the header's padding */
         display: flex;
         flex-direction: column; /* Stack nav items vertically */
@@ -590,7 +590,7 @@
     }
     .main-links a {
         font-size: 0.95rem;
-        width: auto; /* Allow buttons to shrink-wrap content */
+        width: 90%; /* Allow buttons to shrink-wrap content */
         justify-content: flex-start; /* Align content INSIDE button to the left */
         padding: 0.5em 1em; /* Adjust padding for better button appearance */
         border-radius: 20px;
