--- a/index.html
+++ b/index.html
@@ -265,11 +265,14 @@
         }
 
         .banner-image-mobile {
-            display: block; /* Displayed by default within mobile-banner-container */
-            width: 98vw;
-            max-width: 100vw;
-            margin: 0 auto 10px auto;
-            border-radius: 10px;
+            display: block;
+            width: 100vw; /* Extends to the edges of the viewport */
+            aspect-ratio: 1 / 1; /* Forces the image into a perfect square */
+            object-fit: cover; /* Ensures the image covers the entire square, cropping if necessary */
+            object-position: center; /* Keeps the center of the image visible */
+            margin: 0 0 10px 0; /* Sets bottom margin, removes side margins */
+            border-radius: 0; /* Removes rounded corners for sharp edges */
+            max-width: 100vw; /* Ensures it doesn't exceed viewport width */
         }
 
         .hero-images-spacing, .banner-images-spacing {
